--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -166,7 +166,7 @@ html {
 }
 
 body {
-  color: #000;
+  color: #323232;
   font-size: 1.4rem;
   line-height: 1;
   word-break: break-all;
@@ -362,6 +362,28 @@ button:focus-visible {
 #skipNavigation a:active, #skipNavigation a:focus-visible {
   color: #fff;
   background: #000;
+  border-bottom: 1px solid #333;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 200px;
+  line-height: 35px;
+  text-align: center;
+}
+
+.dark {
+  background-color: #242424;
+}
+.dark body {
+  color: #fff;
+}
+.dark #skipNavigation a {
+  color: #000;
+  background-color: #fff;
+}
+.dark #skipNavigation a:active, .dark #skipNavigation a:focus-visible {
+  color: #000;
+  background: #fff;
   border-bottom: 1px solid #333;
   width: 100%;
   position: absolute;
