다크모드 테스트중3

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -371,11 +371,11 @@ button:focus-visible {
   text-align: center;
 }
 
-.dark {
-  background-color: #242424;
-}
 .dark body {
   color: #fff;
+}
+.dark .container {
+  background-color: #242424;
 }
 .dark #skipNavigation a {
   color: #000;
