--- a/resources/css/layout.css
+++ b/resources/css/layout.css
@@ -30,8 +30,72 @@ body {
   padding-top: 4.4rem;
 }
 
+.sector-category {
+  position: relative;
+  padding: 3.9rem 0 17rem;
+  margin-top: -4.4rem;
+}
+.sector-category::after {
+  content: "";
+  position: absolute;
+  display: block;
+  bottom: 0;
+  right: 0;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-size: contain;
+}
+.sector-category.cate1 {
+  background-color: #e4ebdc;
+}
+.sector-category.cate1::after {
+  width: 19.1rem;
+  height: 14.6rem;
+  background-image: url("../images/product/cate1.png");
+}
+.sector-category.cate2 {
+  background-color: #f4c6c4;
+}
+.sector-category.cate2::after {
+  width: 12rem;
+  height: 15.7rem;
+  background-image: url("../images/product/cate2.png");
+}
+.sector-category.cate3 {
+  background-color: #b59dfb;
+}
+.sector-category.cate3::after {
+  width: 16rem;
+  height: 15rem;
+  right: 2.2rem;
+  background-image: url("../images/product/cate3.png");
+}
+.sector-category .category {
+  color: #1a1a1a;
+  position: relative;
+  padding: 0 2.4rem;
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: normal;
+}
+.sector-category .category::after {
+  background-color: #9747ff;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0.1rem 1rem 0.2rem;
+          box-shadow: rgba(0, 0, 0, 0.1) 0.1rem 1rem 0.2rem;
+  content: "";
+  display: block;
+  position: absolute;
+  width: 7rem;
+  height: 0.4rem;
+  top: 50%;
+  left: -0.3rem;
+  border-radius: 0.2rem;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 2;
+}
+
 #header {
-  background-color: #fff;
   position: fixed;
   width: 100%;
   max-width: 79rem;
@@ -40,6 +104,7 @@ body {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+  background-color: transparent;
   z-index: 20;
 }
 #header .menu-btn {
