--- a/resources/scss/layout/_layout.scss
+++ b/resources/scss/layout/_layout.scss
@@ -22,3 +22,75 @@ body {
 #contents {
     padding-top: 4.4rem;
 }
+
+.sector-category {
+    position: relative;
+    padding: 3.9rem 0 17rem;
+    margin-top: -4.4rem;
+
+    &::after {
+        content: '';
+        position: absolute;
+        display: block;
+        bottom: 0;
+        right: 0;
+        background-repeat: no-repeat;
+        background-position: bottom right;
+        background-size: contain;
+    }
+
+    &.cate1 {
+        background-color: #e4ebdc;
+
+        &::after {
+            width: 19.1rem;
+            height: 14.6rem;
+            background-image: url('../images/product/cate1.png');
+        }
+    }
+
+    &.cate2 {
+        background-color: #f4c6c4;
+
+        &::after {
+            width: 12rem;
+            height: 15.7rem;
+            background-image: url('../images/product/cate2.png');
+        }
+    }
+
+    &.cate3 {
+        background-color: #b59dfb;
+
+        &::after {
+            width: 16rem;
+            height: 15rem;
+            right: 2.2rem;
+            background-image: url('../images/product/cate3.png');
+        }
+    }
+
+    .category {
+        color: $Gray900;
+        position: relative;
+        padding: 0 2.4rem;
+        font-size: 4rem;
+        font-weight: 700;
+        line-height: normal;
+
+        &::after {
+            background-color: $Accent;
+            box-shadow: rgba($Black, 0.1) 0.1rem 1rem 0.2rem;
+            content: '';
+            display: block;
+            position: absolute;
+            width: 7rem;
+            height: 0.4rem;
+            top: 50%;
+            left: -0.3rem;
+            border-radius: 0.2rem;
+            transform: translateY(-50%);
+            z-index: 2;
+        }
+    }
+}
