--- a/resources/scss/layout/_button.scss
+++ b/resources/scss/layout/_button.scss
@@ -28,6 +28,26 @@
             border-style: solid;
         }
 
+        &.btype-big {
+            height: 7.6rem;
+            font-size: 2.2rem;
+            font-weight: 700;
+            line-height: 7.6rem;
+            border-radius: 3.3rem;
+            border-width: 0.1rem;
+            border-style: solid;
+        }
+
+        &.no-radius {
+            border-radius: 0;
+        }
+
+        &.btclr-gray900 {
+            color: $White;
+            background-color: $Gray900;
+            border-color: $Gray900;
+        }
+
         &.btclr-accent {
             color: $White;
             background-color: $Accent;
@@ -50,5 +70,17 @@
         left: 50%;
         transform: translateX(-50%);
         z-index: 8;
+    }
+}
+
+.btn-flex {
+    display: flex;
+
+    .fl1 {
+        flex: 1 1;
+    }
+
+    .fl2 {
+        flex: 2 2;
     }
 }
