--- a/resources/css/button.css
+++ b/resources/css/button.css
@@ -25,6 +25,23 @@
   border-width: 0.1rem;
   border-style: solid;
 }
+.btn-wrap .btn.btype-big {
+  height: 7.6rem;
+  font-size: 2.2rem;
+  font-weight: 700;
+  line-height: 7.6rem;
+  border-radius: 3.3rem;
+  border-width: 0.1rem;
+  border-style: solid;
+}
+.btn-wrap .btn.no-radius {
+  border-radius: 0;
+}
+.btn-wrap .btn.btclr-gray900 {
+  color: #fff;
+  background-color: #1a1a1a;
+  border-color: #1a1a1a;
+}
 .btn-wrap .btn.btclr-accent {
   color: #fff;
   background-color: #9747ff;
@@ -45,4 +62,20 @@
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   z-index: 8;
+}
+
+.btn-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.btn-flex .fl1 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+}
+.btn-flex .fl2 {
+  -webkit-box-flex: 2;
+      -ms-flex: 2 2;
+          flex: 2 2;
 }
