--- a/resources/scss/abstract/_var.scss
+++ b/resources/scss/abstract/_var.scss
@@ -11,6 +11,7 @@ $Negative: #ff0000;
 $Positive: #0066ff;
 $Caution: #ff5500;
 $Dark: #242424;
+$Amber400: #fbbf24;
 
 /* Brand Color */
 $Primary: #323232;
