--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -339,9 +339,13 @@ input[type=checkbox]:focus-visible + label {
 a:hover, a:focus-visible,
 button:hover,
 button:focus-visible {
-  -webkit-box-shadow: inset #8b5cf6 0 0 0 3px;
-          box-shadow: inset #8b5cf6 0 0 0 3px;
+  -webkit-box-shadow: inset #fbbf24 0 0 0 3px;
+          box-shadow: inset #fbbf24 0 0 0 3px;
   outline: none;
+}
+
+img {
+  max-width: 100%;
 }
 
 #skipNavigation {
@@ -413,4 +417,63 @@ button:focus-visible {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
+}
+@-webkit-keyframes scaling-dots {
+  0%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  40%, 60% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes scaling-dots {
+  0%, 100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  40%, 60% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+.scaling-dots {
+  display: grid;
+  height: 10px;
+  grid-gap: 5px;
+  grid-template-columns: repeat(5, 10px);
+}
+
+.scaling-dots div {
+  -webkit-animation: scaling-dots 1s infinite ease backwards;
+          animation: scaling-dots 1s infinite ease backwards;
+  border-radius: 100%;
+  height: 10px;
+  width: 10px;
+}
+
+.scaling-dots div:nth-child(1) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+
+.scaling-dots div:nth-child(2) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+
+.scaling-dots div:nth-child(3) {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+
+.scaling-dots div:nth-child(4) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
+.scaling-dots div:nth-child(5) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
 }
