--- a/resources/scss/layout/_button.scss
+++ b/resources/scss/layout/_button.scss
@@ -3,6 +3,11 @@
         padding: 0 2rem 1.9rem;
     }
 
+    .btn-inner2 {
+        padding: 1.8rem 0;
+        background: linear-gradient(180deg, rgba($Gray900, 0) 0%, rgba($Gray900, 0.9) 30%, rgba($Gray900, 0.9) 100%);
+    }
+
     .btn {
         display: block;
         width: 100%;
@@ -59,6 +64,27 @@
             background-color: transparent;
             border-color: transparent;
             border-radius: 0;
+        }
+    }
+
+    .roundbtn {
+        background-color: $Accent;
+        display: block;
+        width: 7rem;
+        height: 7rem;
+        margin: auto;
+        border-radius: 50%;
+    }
+
+    .btnico {
+        @include ir();
+        margin: auto;
+
+        &.ico-mic {
+            width: 2.4rem;
+            height: 4.1rem;
+            background: url('../images/icon/ico_mic.svg') no-repeat;
+            background-size: contain;
         }
     }
 
