--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,5 +7,6 @@
 @import url('./base.css'); /* 초기화, 폰트 */
 @import url('./layout.css'); /* 메인, 서브 레이아웃 */
 @import url('./button.css'); /* 버튼 */
+@import url('./form.css'); /* form 레이아웃 */
 @import url('./list.css'); /* 목록 레이아웃 */
 @import url('./contents.css'); /* 페이지 컨텐츠 */
