--- a/resources/scss/layout/_layout.scss
+++ b/resources/scss/layout/_layout.scss
@@ -248,7 +248,7 @@ body {
     }
 }
 
-.order-cont {
+.buy-cont {
     position: relative;
     padding: 3rem 2.4rem 10rem 3.4rem;
     word-break: keep-all;
